// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TargetPageChangedView renders with subtitle=test subtitle content and feature flag= false 1`] = `
<DocumentFragment>
  <div
    class="staticContentInDetailsView"
  >
    <h1>
      test title
    </h1>
    <div
      class="targetPageChangedSubtitle"
    >
      test subtitle content
    </div>
    <p>
      The target page has changed. Use the 
      <mock-inlinestartoverbutton
        detailsviewactionmessagecreator="[object Object]"
        selectedtest="2"
      />
       button to scan the new target page.
    </p>
  </div>
</DocumentFragment>
`;

exports[`TargetPageChangedView renders with subtitle=undefined and feature flag= false 1`] = `
<DocumentFragment>
  <div
    class="staticContentInDetailsView"
  >
    <h1>
      test title
    </h1>
    <div
      class="targetPageChangedSubtitle"
    />
    <p>
      The target page has changed. Use the 
      <mock-inlinestartoverbutton
        detailsviewactionmessagecreator="[object Object]"
        selectedtest="2"
      />
       button to scan the new target page.
    </p>
  </div>
</DocumentFragment>
`;

exports[`TargetPageChangedView renders with subtitle=undefined and feature flag= true 1`] = `
<DocumentFragment>
  <div
    class="staticContentInDetailsView"
  >
    <h1>
      test title
    </h1>
    <div
      class="targetPageChangedSubtitle"
    />
    <p>
      The target page has changed. Use the 
      <mock-inlinestartoverbutton
        detailsviewactionmessagecreator="[object Object]"
        selectedtest="2"
      />
       button to scan the new target page.
    </p>
  </div>
</DocumentFragment>
`;
